Changelog:

Key:
  + Addition
  = Fix
  ! Change
  - Removal

Version 1.1.4 | Tested on CB 1.5.0-R0.1

Version 1.1.3 | Tested on CB 1.5.0-R0.1
 + Added MythicDrops support
 + Added permission node which allows certain players to pickup items which are not Soulbound to that player
 + Added permission node which limit the maximum amount of Soulbound items a player can carry at once
 + Added new configuration option to let Soulbound items have infinite durability
 + Added new command to Soulbind a full inventory. /bind [player] inventory
 = Fixed bug which caused the plugin to ignore cancelled SoulbindItemEvents
 ! Improved the Bind on Equip mechanism even more, to account for recent inventory changes in MC 1.5

Version 1.1.2 | Tested on CB 1.4.7-R1.0 & 1.5.0-R0.1
 + Added help pages, access them using /soulbound help
 = Fixed bug where DiabloDrops chests where never edited. Chest generated by DiabloDrops can now also contain Soulbound items
 = Fixed bug where Chainmail armor and Skulls were never Binded on Equip
 = Fixed bug which caused an NPE when trying to bind with nothing in hand
 = Fixed bug which would throw an ArrayIndexOutOfBounds error
 = Fixed bug which allowed player to Soulbind items twice
 ! Improved the Bind on Equip mechanism!

Version 1.1.1 | Tested on CB 1.4.7-R1.0
 + Added API functions so other plugins can hook into Soulbound as well! (Instead of the other way round)
 + Added support for LoreLocks!
 = Fixed bug with the Update Checker (I really did this time)
 = Fixed bug with EpicBossRecoded when bosses had no loot defined

Version 1.1.0 | Tested on CB 1.4.7-R1.0
 + Added support for DiabloDrops! Make Legendary items Soulbound on pickup, or make armor Sets Soulbound on Equip
 + Added support for EpicBossRecoded! Drops from an EpicBoss can get flagged as "Bind on Pickup", "Bind on Equip" or "Bind on Use"
 + Added new item type "Bind on Equip", when a player equips this item it will get Soulbound to that player