@@ -7,6 +7,7 @@ Key:
   - Removal
 
 Version 1.1.4 | Tested on CB 1.5.0-R0.1
+ ! Hoppers can no longer pickup Soulbound items
 
 Version 1.1.3 | Tested on CB 1.5.0-R0.1
  + Added MythicDrops support
